<resources>
    <string name="app_name">Eagle Security</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="signin">Sign in!</string>
    <string name="adminSignIn">Sign in as Admin</string>
    <string name="updateUser">Update</string>
    <string name="changePass">Change Password</string>
    <string name="register">Register</string>
    <string name="assignButton">Assign</string>
    <string name="email_et">E-Mail</string>
    <string name="fName">First Name</string>
    <string name="LName">Last Name</string>
</resources>